[package]
name = "ioctl-gen"
version = "0.1.0"
authors = ["Ram Kaniyur <quadrupleslap@gmail.com>"]
description = "Simple macros for generating ioctl numbers."
license_file = "LICENSE.md"
repository = "https://github.com/quadrupleslap/ioctl-gen"
documentation = "TODO"
keywords = ["ioctl", "number", "encode", "control", "linux"]

