[package]
name = "ioctl-gen"
version = "0.1.1"
authors = ["Ram Kaniyur <quadrupleslap@gmail.com>"]
description = "Simple macros for generating ioctl numbers."
license = "MIT"
repository = "https://github.com/quadrupleslap/ioctl-gen"
documentation = "https://docs.rs/ioctl-gen"
keywords = ["ioctl", "number", "encode", "control", "linux"]

